--- a/src/components/AppContent/Breeds/GridPhotos/index.scss
+++ b/src/components/AppContent/Breeds/GridPhotos/index.scss
@@ -10,7 +10,7 @@
     display: grid;
     grid-template-columns: repeat(3, 200px);
     grid-template-rows: repeat(3, 140px);
-    gap: 20px;
+    gap: 15px;
   }
 
   &-link {
