--- a/src/components/SidebarCard/index.scss
+++ b/src/components/SidebarCard/index.scss
@@ -52,6 +52,8 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     color: #ff868e;
+    background-color: #fff;
+    border-radius: 10px;
     width: 100%;
     padding: 10px 0;
   }
